--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "react-typescript-app",
+  "name": "react-app-typescript",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "^28.1.1",
-    "@types/node": "^17.0.42",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.11.40",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
-    "cra-template-typescript": "1.2.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.3",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
